# ReverseRug

./: .gitignore  PUBLIC_RELEASE_CHECKLIST.md  README.md  SECURITY.md  docker-compose.traefik.yml
.github/workflows/: anchor-build.yml
ReverseRug-Front/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.css  test.html  vite.config.ts
ReverseRug-Front/src/: App.tsx  ErrorBoundary.tsx  index.tsx  polyfills.ts  vite-env.d.ts
ReverseRug-Front/src/api/: client.ts
ReverseRug-Front/src/components/: LiveRoundCard.tsx  Logo.tsx  MobileCTA.tsx  Nav.tsx  WinnersList.tsx
ReverseRug-Front/src/hooks/: useRoundData.ts  (+1 more)
backend/: README.md
backend/offchain/: .env.example  Dockerfile  README.md  check-account-size.ts  check-epoch9.ts  check-lock-time.ts  check-participant-pda.ts  deploy-vrf.sh  package-lock.json  package.json  quick-add-participants.sh  scenario1-setup.sh  select-winner.ts  set-carryover.ts  simulate-withdraw.ts  tsconfig.json  verify-deployment.sh
backend/onchain/: Anchor.toml  Cargo.toml  README.md  package.json
backend/onchain/migrations/: deploy.ts
backend/onchain/programs/reward-pool/: Cargo.toml
backend/onchain/programs/reward-pool/src/: instruction.rs  lib.rs  processor.rs
backend/onchain/programs/reward-pool/src/errors/: mod.rs
backend/onchain/programs/reward-pool/src/state/: distribution.rs  global_state.rs  mod.rs  participant.rs  participant_registry.rs
backend/onchain/tests/: reward-pool.test.ts
backend/scripts/: README.md  distribute-usdc.sh
(+69 files in other folders)
