[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
switchboard-v2 = { path = "./vendor/switchboard-v2" }
anchor-spl = { path = "./vendor/anchor-spl" }
blake3 = { path = "./vendor/blake3" }

